--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     	canvas { background: #eee; display: block; margin: 0 auto; }
     </style>
 </head>
+<div>
+    <button id = "newPlayer" onclick="createPlayer()" style="width:100px;height:30px;">New Player</button>Create new Player
+    
+</div>
 <body>
 
-<canvas id="myCanvas" width="1500" height="1500"></canvas>
+<canvas id="myCanvas" width="1000" height="1000"></canvas>
 
 <script src="test.js"></script>
 
