added a new js file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 <body>
 
-<canvas id="myCanvas" width="1000" height="1000"></canvas>
+<canvas id="myCanvas" width="1000" height="1000" onmousemove="movePlayer(event)"></canvas>
 
 <script src="test.js"></script>
 
