added breif movemnet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Testing</title>
@@ -10,13 +11,13 @@
 </head>
 <div>
     <button id = "newPlayer" onclick="createPlayer()" style="width:100px;height:30px;">New Player</button>Create new Player
-    
 </div>
+
 <body>
 
-<canvas id="myCanvas" width="1000" height="1000" onmousemove="movePlayer(event)"></canvas>
-
-<script src="test.js"></script>
+<canvas id="myCanvas" width="1000" height="1000" onmousemove="setTarget(event)"></canvas>
+<script src="game.js"></script>
+<p id="demo"></p>
 
 </body>
 </html>
